# ompi

config/: orte_check_bbque.m4
orte/mca/ras/bbque/: Makefile.am  configure.m4  help-ras-bbque.txt  owner.txt  ras_bbque.h  ras_bbque_component.c  ras_bbque_module.c  ras_bbque_protocol.h
